<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/settings_row_margin_vertical">

        <com.cyberbot.checkers.ui.view.CheckersGridView
            android:id="@+id/settingsGridPreview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:view_size="auto" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textViewPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/settings_board_preview"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsGridPreview"
            tools:text="Preview" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:text="@string/settings_grid_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/settingsGridSizeChipGroup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="Gird size" />

        <Switch
            android:id="@+id/settingsMandatoryCapturesSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            android:text="@string/settings_mandatory_captures"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsCaptureHintsSwitch" />

        <Switch
            android:id="@+id/settingsAutoCaptureSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            android:text="@string/settings_auto_capture"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsMandatoryCapturesSwitch" />

        <Switch
            android:id="@+id/settingsFlyingKingSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            android:showText="false"
            android:text="@string/settings_flying_king"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsCaptureBackwardSwitch" />

        <Switch
            android:id="@+id/settingsMoveBackwardSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            android:text="@string/settings_can_move_backward"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsAutoCaptureSwitch" />

        <Switch
            android:id="@+id/settingsCaptureBackwardSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            android:text="@string/settings_can_capture_backward"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsMoveBackwardSwitch" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/settingsGridSizeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            app:checkedChip="@id/chip10"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_8_8"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip10"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_10_10"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip12"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_button_12_12"
                app:chipBackgroundColor="@color/chip_background_color" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/settingsDifficultyChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            app:checkedChip="@id/chipMedium"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipEasy"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_difficulty_easy"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMedium"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_difficulty_medium"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHard"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_difficulty_hard"
                app:chipBackgroundColor="@color/chip_background_color" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:text="@string/settings_difficulty"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/settingsDifficultyChipGroup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Switch
            android:id="@+id/settingsCaptureHintsSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_row_margin_horizontal"
            android:layout_marginTop="@dimen/settings_row_margin_vertical"
            android:layout_marginEnd="@dimen/settings_row_margin_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/settings_capture_hints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>